--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="icon" href="images/icon.jpg" type="image/gif" sizes="16x16"> 
 </head>
 <body>
+
+
+
+<h1>Don't leave home without penguin </h1>
+
+
     <div class ="container">
 <div class="row">
     <div class="column">
@@ -119,9 +125,6 @@
 
 
 </div>
-
-
-
 
 
 
